Fix box-shadow on Safari

--- a/commons/static/commons/css/base.scss
+++ b/commons/static/commons/css/base.scss
@@ -15,7 +15,7 @@ body {
 }
 
 .header-page {
-  box-shadow: 0 0.25rem 0.75rem rgba(0, 0, 0, 0.05);
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
   border-bottom: 1px solid #e5e5e5;
 }
 
