--- a/commons/static/commons/css/variables.scss
+++ b/commons/static/commons/css/variables.scss
@@ -4,7 +4,7 @@ $blue-bg: #2a77b7;
 $yellow-text: #dcb029;
 $yellow-bg: #e6bc3d;
 $light-gray-bg: #f9f9fb;
-$default-box-shadow: 0 0.055rem 0.025rem rgba(10, 10, 29, 0.09), 0 -0.01rem 0.02rem rgba(10, 10, 29, 0.09);
+$default-box-shadow: 0 1px 1px rgba(10, 10, 29, 0.09), 0 0 1px rgba(10, 10, 29, 0.09);
 
 
 // Bulma variables
